# fastapi-aula-formacao

./: pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
src/: main.py
src/crud/: posts.py
src/models/: posts.py
src/routes/api/v1/: posts.py
src/services/: openai_service.py
tests/: conftest.py  test_openai_service.py
